# asterisk-chan-quectel

./: CMakeLists.txt  CMakePresets.json  quectel.conf
.github/actions/install-asterisk-headers/: action.yml
.github/actions/install-openwrt-sdk/: action.yml  download-owrt-sdk.sh
.github/actions/install-required-packages/: action.yml
.github/workflows/: build-deb.yml  build-debian.yml  build-ipk.yml  build-openwrt.yml  build.yml
asterisk-chan-quectel/: Makefile
cmake/: AsteriskVersion.cmake  GenerateVersion.cmake  Packaging.cmake  config.h.in
docker/task.d/chan-quectel/: Taskfile.dist.yaml
etc/: quectel.conf
openwrt/: CMakeLists.txt  build-openwrt.sh  build-opk.sh  make-feeds-conf.cmake  makefile-git.in  makefile-standalone.in  readme-package-building.txt
src/: CMakeLists.txt  app.c  at_command.c  at_queue.c  at_queue.h  at_response.c  at_response.h  chan_quectel.c  chan_quectel.h  channel.c  channel.h  cli.c  cpvt.c  dc_config.c  dc_config.h  helpers.c  helpers.h  memmem.c  monitor_thread.c  pcm.c  ptime-config.h.in
uac/: quectel.conf
